# Weekend-Raytracer

./: CMakeLists.txt  README.md  camera.c  camera.h  denoise.c  denoise.h  extraMath.c  extraMath.h  main.c  material.h  platformUtil.c  platformUtil.h  ray.c  ray.h  shape.h  stb_image_write.h  vec3.c  vec3.h
config/: config.h.in
shaders/: emission.c  emission.h  glass.c  glass.h  lambert.c  lambert.h  simpleMetal.c  simpleMetal.h
shapes/: plane.c  plane.h  shapeList.c  shapeList.h  sphere.c  sphere.h
